[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-client-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-consensus = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-core = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-inherents = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-runtime = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-block-builder = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-blockchain = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-api = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sp-trie = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-prometheus-endpoint = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }
polkadot-runtime = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Substrate deps
sp-tracing = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
substrate-test-utils = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-service = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }
sc-cli = { git = "https://github.com/compound-finance/substrate", branch = "gateway" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../../test/runtime" }
cumulus-test-client = { path = "../../../test/client" }
cumulus-test-service = { path = "../../../test/service" }
cumulus-primitives-core = { path = "../../../primitives/core" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/compound-finance/polkadot", branch = "gateway" }

# Other deps
tokio = { version = "0.2.21", features = ["macros"] }
futures-timer = "3.0.2"
